# xenon

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: analytics.rs  api.rs  app.rs  cli.rs  config.rs  draw.rs  exporter.rs  main.rs  mcp.rs  model.rs  monitor.rs  tui.rs  webhook.rs
