[package]
name = "xenon"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mehmet T. AKALIN"]
description = "Real-time X monitoring toolkit with CLI, API, TUI, and MCP support."

[dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.27"
futures = "0.3"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
ratatui = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.10"
